Flex embed view.

--- a/client/app/visualizations/chart/chart.html
+++ b/client/app/visualizations/chart/chart.html
@@ -1,4 +1,4 @@
-<div ng-if="plotlyOptions.globalSeriesType != 'custom'">
+<div ng-if="plotlyOptions.globalSeriesType != 'custom'" class="varanus_custom_for_embed">
   <plotly-chart options="plotlyOptions" series="chartSeries"></plotly-chart>
 </div>
 <div ng-if="plotlyOptions.globalSeriesType == 'custom'">
